bumped XText version, POM cleanup